objects/Buying_Process_Plan__c.object
<CustomObject>
    <label>Buying Process Plan Event</label>
    <nameField>
        <label>Buying Process Plan Event</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Buying Process Plan</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <fields>
        <fullName>Event__c</fullName>
        <label>Event</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Go_NoGo__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Go - NoGo</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Week_of__c</fullName>
        <label>Week of</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Billable__c</fullName>
        <label>Billable</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Resources__c</fullName>
        <label>Resources</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Opportunity__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Opportunity</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipName>Buying_Process_Plans</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Responsible__c</fullName>
        <label>Responsible</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Customer</fullName>
                </value>
                <value>
                    <fullName>PerkinElmer</fullName>
                </value>
                <value>
                    <fullName>Both</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Event_Completed__c</fullName>
        <label>Event Completed</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
</CustomObject>